# WorldCup-prediction-model-Klement-2.0

./: README.md  pyproject.toml
