[project]
name = "worldcup-prediction-model-klement-2-0"
version = "0.1.0"
description = ""
authors = [
    {name = "cezar-andrade-dev",email = "cezar.andrade.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "worldcup_prediction_model_klement_2"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
